Use Java 11 'var' in tests